nailed it, said CSS Ninja

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" lang="en">
+<html lang="en">
 <!--<![endif]-->
 
 <head>
@@ -13,32 +13,22 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Chivo|Overpass" rel="stylesheet">
 </head>
+
 <body>
-<header role="banner">
-    <h1>Welcome to
-        <img class="logo" src="images/myWave2.jpg">
-    </h1>
-        <h2>Where we believe that you don't have to be an expert to catch that perfect wave!</h2>
-</header>
+    <header role="banner">
 
-<main role="main">
-    <div class="container">
-        
+    </header>
 
-            <section role="section" class="container-left">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper gravida est, eu ultricies mauris sodales
-                    ac. Quisque auctor urna lectus, eu ultrices massa dapibus id. Donec in eros velit. Vestibulum pretium
-                    luctus turpis in feugiat. Sed eleifend viverra metus eget sollicitudin. Proin eu felis nisi. Vestibulum
-                    vel lobortis purus, et maximus nisl. Maecenas volutpat rhoncus consectetur. Nulla molestie ex in dapibus
-                    consectetur. Cras maximus sem non nulla varius, in pulvinar tortor placerat. Donec at convallis lectus,
-                    vel pharetra lorem. Ut hendrerit nunc elit, at placerat leo dignissim et. Mauris sagittis arcu non risus
-                    sagittis luctus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                    Donec tincidunt quis augue eu rutrum. Vivamus convallis ante lacus, a tempus ante gravida ut. Integer
-                    sed orci ac libero porta consequat at a dui. Vestibulum venenatis neque et finibus iaculis. Etiam porttitor
-                    felis et lorem convallis, at sodales nisi volutpath</p>
-            </section>
-            <section role="section" class="container-right">
+    <main role="main">
+        <div class="container">
+            <h1>Welcome to
+                <img class="logo" src="images/myWave2.jpg">
+            </h1>
+            <h2>Where we believe that you don't have to be an expert to catch that perfect wave!</h2>
+
+            <section role="section">
                 <form>
                     <fieldset>
                         <legend>To begin, select a location from the following:</legend>
@@ -48,24 +38,24 @@
                         </select>
                     </fieldset>
                     <button class="spot-button" type="submit">GO!</button>
-                </form> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper gravida est, eu ultricies mauris sodales ac. Quisque auctor urna lectus, eu ultrices massa dapibus id. Donec in eros velit. Vestibulum pretium luctus turpis in feugiat. Sed eleifend viverra metus eget sollicitudin. Proin eu felis nisi. Vestibulum vel lobortis purus, et maximus nisl. Maecenas volutpat rhoncus consectetur. Nulla molestie ex in dapibus consectetur. Cras maximus sem non nulla varius, in pulvinar tortor placerat. Donec atLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper gravida est, eu ultricies mauris sodales ac. Quisque auctor urna lectus, eu ultrices massa dapibus id. Donec in eros velit. Vestibulum pretium luctus turpis in feugiat. Sed eleifend viverra metus eget sollicitudin. Proin eu felis nisi. Vestibulum vel lobortis purus, et maximus nisl. Maecenas volutpat rhoncus consectetur. Nulla molestie ex in dapibus consectetur. Cras maximus sem non nulla varius, in pulvinar tortor placerat. Donec at</p> 
+                </form>
+                    <h3>How It Works:</h3>
+                        <p>Choose your spot from the dropdown menu, and the soonest available forecast will be provided. Our complex formula takes all the guesswork out of it! You can now see what the conditions are like in one quick glimpse.</p>
             </section>
             <section role="section" id="js-rating">
-              <p>StarS???</p>
+                <p>StarS???</p>
             </section>
-        
 
-</main>
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-<script src="scripts/DATA.js" async defer></script>
-<script src="scripts/index.js" async defer></script>
+    </main>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="scripts/DATA.js" async defer></script>
+    <script src="scripts/index.js" async defer></script>
 
 
 
 </body>
 
 </html>
-
