still needs some css and directional function

--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/main.css">
     <link href="https://fonts.googleapis.com/css?family=Chivo|Overpass" rel="stylesheet">
 </head>
 
 <body>
-    <header role="banner">
-
-    </header>
-
     <main role="main">
         <div class="container">
             <h1>Welcome to
-                <img class="logo" src="images/myWave2.jpg">
+                <img class="logo" src="images/mywave.png">
             </h1>
             <h2>Where we believe that you don't have to be an expert to catch that perfect wave!</h2>
 
