--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
 <body>
     <main role="main">
+            <header role="banner" class="nav">
+                    <img class="navLogo" src="images/mywave.png">
+                        <button type="button" class="enjoy-css">Back</button>
+                </header>
         <div class="container">
             <h1>Welcome to
                 <img class="logo" src="images/mywave.png">
