--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
 <body>
     <main role="main">
-
-        <div class="container"></div>
+        <div class="loading"><span class="fas fa-spinner fa-3x fa-spin"></span></div>
+            <div class="container" aria-live="assertive"></div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="scripts/DATA.js" async defer></script>
-    <script src="scripts/index.js" async defer></script>
+    <script src="scripts/index.js" async defer></script> 
 
 
 
